# stella

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DEV-CONTEXT.md  README.MD  package.json  tsconfig.json  vercel_openai_compat.html
.claude/: settings.local.json
backend/: .gitignore  AGENTS.md  CLAUDE.md  convex_rules.md  package-lock.json  package.json
desktop/: .electron-dev-runner.pid  .gitignore  AGENTS.md  CLAUDE.md  Cleanup logs.md  FRONTEND_ARCHITECTURE_OPTIONS.md  LOCAL_FIRST_PROPOSAL.md  SECURITY-REVIEW.md  SELF_MODIFICATION_ARCHITECTURE.md  STATE_OWNERSHIP.md  eslint.config.js  index.html  mini.html  overlay.html  package-lock.json  package.json  perf-profile.mjs  pet.html  radial.html  region.html  tsconfig.app.json  tsconfig.electron.json  tsconfig.electron.tsbuildinfo  tsconfig.json  tsconfig.package.base.json  tsconfig.preload.json  vite.config.ts  vitest.config.ts  vitest.electron.config.ts  voice-runtime.html
desktop/native/wakeword/: Cargo.toml
desktop/native/wakeword/models/: hey_stella_metrics.json
desktop/native/wakeword/src/: main.rs
devtool/: index.html  package.json  tsconfig.json
docs/: stella-computer.md  stella-extraction-blueprint.md  stella-runtime-blueprint.md  sync_off_operational_writes.md
launcher/: .gitignore  README.md  SKILL.md  electrobun.config.ts  (+5 more)
launcher/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: bootstrap.rs  commands.rs  disk.rs  main.rs  recovery.rs  setup.rs  shell.rs  state.rs
(+3856 files in other folders)
