[package]
name = "stella-launcher"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "StellaSetup"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "io-util"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
dirs = "6"
fs2 = "0.4"
open = "5"
regex-lite = "0.1"
tar = "0.4"
zstd = "0.13"
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
